--- a/designs/UI/index.html
+++ b/designs/UI/index.html
@@ -27,9 +27,9 @@
     <div class="header">
         <nav>
             <h1 class="text-muted text-right">WeConnect</h1>
-            <ul class="nav nav-pills pull-right">
-                <li role="presentation"><a href="login.html">Sign In</a></li> |
-                <li role="presentation"><a href="#">Sign Up</a></li>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link" href="login.html">Sign In</a></li>
+                <li "nav-item"><a class="nav-link" href="#">Sign Up</a></li>
             </ul>
         </nav>
     </div>
