--- a/designs/UI/login.html
+++ b/designs/UI/login.html
@@ -27,10 +27,16 @@
     <div class="header">
         <nav>
             <h1 class="text-muted text-right">WeConnect</h1>
-            <ul class="nav nav-pills pull-right">
-                <li role="presentation"><a href="index.html">Home</a></li> |
-                <li role="presentation"  class="active"><a href="#">Sign In</a></li> |
-                <li role="presentation"><a href="#">Sign Up</a></li>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li> 
+                <li class="nav-item" >
+                    <a class="nav-link active" href="#">Sign In</a>
+                </li> 
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sign Up</a>
+                </li>
             </ul>
         </nav>
     </div>
@@ -45,6 +51,7 @@
             <input placeholder="**********" required autofocus>
             <hr>
             <button class="btn btn-primary btn-inline">Go</button>
+            <a href="all_reviews.html">clickme</a>
             <hr>
             <p>Don't have an account? <a href="#">Sign up</a> here for FREE</p>
 
