Retrieve all business reviews

--- a/designs/UI/sign_in.html
+++ b/designs/UI/sign_in.html
@@ -35,7 +35,7 @@
                     <a class="nav-link active" href="#">Sign In</a>
                 </li> 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sign Up</a>
+                    <a class="nav-link" href="sign_up.html">Sign Up</a>
                 </li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
             <button class="btn btn-primary btn-inline">Go</button>
             <a href="all_reviews.html">clickme</a>
             <hr>
-            <p>Don't have an account? <a href="#">Sign up</a> here for FREE</p>
+            <p>Don't have an account? <a href="sign_up.html">Sign up</a> here for FREE</p>
 
         </form>    
     </div>
