--- a/designs/UI/index.html
+++ b/designs/UI/index.html
@@ -28,8 +28,9 @@
         <nav>
             <h1 class="text-muted text-right">WeConnect</h1>
             <ul class="nav nav-pills">
-                <li class="nav-item"><a class="nav-link" href="login.html">Sign In</a></li>
-                <li "nav-item"><a class="nav-link" href="#">Sign Up</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="sign_in.html">Sign In</a></li>
+                <li "nav-item"><a class="nav-link" href="sign_up.html">Sign Up</a></li>
             </ul>
         </nav>
     </div>
