Add registration form
[finishes #155504485]

--- a/designs/UI/index.html
+++ b/designs/UI/index.html
@@ -45,11 +45,11 @@
             about the businesses they have interacted with.
         </p>
         <hr>
-        <p><a href="#">Sign Up</a> to view what others are saying about the 
+        <p><a href="sign_up.html">Sign Up</a> to view what others are saying about the 
             businesses in your locale. 
         </p>
         <p>
-            <a class="btn btn-primary btn-lg" href="#" role="button" >
+            <a class="btn btn-primary btn-lg" href="register_biz.html" role="button" >
                 Register Your Business
             </a>
         </p>
