Add profile update page(static) and posithing page (static)
[finishes #155504574]

--- a/designs/UI/biz_profile.html
+++ b/designs/UI/biz_profile.html
@@ -32,10 +32,10 @@
                     <a class="nav-link" href="write_post.html">Post</a>
                 </li> 
                 <li class="nav-item" >
-                    <a class="nav-link active" href="#">Reviews</a>
+                    <a class="nav-link" href="all_reviews.html">Reviews</a>
                 </li> 
                 <li class="nav-item">
-                    <a class="nav-link" href="biz_profile.html">Profile</a>
+                    <a class="nav-link active" href="#">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Log Out</a>
@@ -45,7 +45,7 @@
     </div>
     <hr>
     <div class="card">
-        <h3 class="card-header">Business of the Day</h3>
+        <h3 class="card-header">Category</h3>
         <div class="card-block">
             <h4 class="card-title">The Business Name</h4>
             <p class="card-text">
@@ -58,21 +58,7 @@
                 Orci varius natoque penatibus et magnis dis parturient montes, 
                 nascetur ridiculus mus. Proin quis suscipit sapien. 
                 Morbi venenatis ligula enim, vitae sodales enim mais ew at.</p>
-            <a href="#" class="btn btn-primary">Read more reviews about us.</a>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-lg-offset-3 col-lg-12">
-            <div class="input-group">
-                <span class="input-group-btn">
-                  <button class="btn btn-primary" type="button">Name Search</button>
-                </span>
-                <input type="text" class="form-control" placeholder="Type to search" required autofocus>
-                <span class="input-group-btn">
-                  <button class="btn btn-primary" type="button">Location Search</button>
-                </span>
-            </div>
+            <a href="update_profile.html" class="btn btn-primary">Update Business Profile.</a>
         </div>
     </div>
     <hr>
@@ -87,23 +73,6 @@
                 Nullam euismod bibendum tempor. Etiam non tellus magna. 
                 Vivamus posuere mi sed feugiat ultricies.
             </p>
-            <a href="#" class="btn btn-primary">More About Us</a>
-        </div>
-        <div class="card-footer text-muted">Location</div>
-    </div>
-    <hr>
-    <div class="card text-center">
-        <div class="card-header">Category</div>
-        <div class="card-block">
-            <h4 class="card-title">Business Namet</h4>
-            <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing 
-                elit. Etiam vitae laoreet justo, nec suscipit nibh. 
-                Vestibulum eget turpis non magna posuere sagittis nec quis nisi. 
-                Nullam euismod bibendum tempor. Etiam non tellus magna. 
-                Vivamus posuere mi sed feugiat ultricies.
-            </p>
-            <a href="#" class="btn btn-primary">More About Us</a>
         </div>
         <div class="card-footer text-muted">Location</div>
     </div>
@@ -119,7 +88,6 @@
                 Nullam euismod bibendum tempor. Etiam non tellus magna. 
                 Vivamus posuere mi sed feugiat ultricies.
             </p>
-            <a href="#" class="btn btn-primary">More About Us</a>
         </div>
         <div class="card-footer text-muted">Location</div>
     </div>
@@ -135,7 +103,21 @@
                 Nullam euismod bibendum tempor. Etiam non tellus magna. 
                 Vivamus posuere mi sed feugiat ultricies.
             </p>
-            <a href="#" class="btn btn-primary">More About Us</a>
+        </div>
+        <div class="card-footer text-muted">Location</div>
+    </div>
+    <hr>
+    <div class="card text-center">
+        <div class="card-header">Category</div>
+        <div class="card-block">
+            <h4 class="card-title">Business Name</h4>
+            <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing 
+                elit. Etiam vitae laoreet justo, nec suscipit nibh. 
+                Vestibulum eget turpis non magna posuere sagittis nec quis nisi. 
+                Nullam euismod bibendum tempor. Etiam non tellus magna. 
+                Vivamus posuere mi sed feugiat ultricies.
+            </p>
         </div>
         <div class="card-footer text-muted">Location</div>
     </div>
