--- a/designs/UI/all_reviews.html
+++ b/designs/UI/all_reviews.html
@@ -44,6 +44,22 @@
         </nav>
     </div>
     <hr>
+    <form class="form-inline">
+        <label class="mr-sm-2" for="inlineFormCustomSelect">Search</label>
+        <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="inlineFormCustomSelect">
+          <option selected>Choose...</option>
+          <option value="1">By Business Name</option>
+          <option value="2">By Location</option>
+          <option value="3">Both</option>
+        </select>
+      
+        <label class="sr-only" for="inlineFormInput">Name</label>
+        <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="inlineFormInput" 
+        placeholder="Type here...." required autofocus>
+      
+        <button type="submit" class="btn btn-primary">Go</button>
+      </form>
+    <hr>
     <div class="card">
         <h3 class="card-header">Business of the Day</h3>
         <div class="card-block">
@@ -62,22 +78,8 @@
         </div>
     </div>
     <hr>
-    <div class="row">
-        <div class="col-lg-offset-3 col-lg-12">
-            <div class="input-group">
-                <span class="input-group-btn">
-                  <button class="btn btn-primary" type="button">Name Search</button>
-                </span>
-                <input type="text" class="form-control" placeholder="Type to search" required autofocus>
-                <span class="input-group-btn">
-                  <button class="btn btn-primary" type="button">Location Search</button>
-                </span>
-            </div>
-        </div>
-    </div>
-    <hr>
     <div class="card text-center">
-        <div class="card-header">Category</div>
+        <div class="card-header">Cartegory</div>
         <div class="card-block">
             <h4 class="card-title">Business Name</h4>
             <p class="card-text">
@@ -93,7 +95,7 @@
     </div>
     <hr>
     <div class="card text-center">
-        <div class="card-header">Category</div>
+        <div class="card-header">Cartegory</div>
         <div class="card-block">
             <h4 class="card-title">Business Namet</h4>
             <p class="card-text">
@@ -109,7 +111,7 @@
     </div>
     <hr>
     <div class="card text-center">
-        <div class="card-header">Category</div>
+        <div class="card-header">Cartegory</div>
         <div class="card-block">
             <h4 class="card-title">Business Name</h4>
             <p class="card-text">
@@ -125,7 +127,7 @@
     </div>
     <hr>
     <div class="card text-center">
-        <div class="card-header">Category</div>
+        <div class="card-header">Cartegory</div>
         <div class="card-block">
             <h4 class="card-title">Business Name</h4>
             <p class="card-text">
