--- a/designs/UI/biz_profile.html
+++ b/designs/UI/biz_profile.html
@@ -45,7 +45,7 @@
     </div>
     <hr>
     <div class="card">
-        <h3 class="card-header">Category</h3>
+        <h3 class="card-header">Cartegory</h3>
         <div class="card-block">
             <h4 class="card-title">The Business Name</h4>
             <p class="card-text">
@@ -65,7 +65,7 @@
     </div>
     <hr>
     <div class="card text-center">
-        <div class="card-header">Category</div>
+        <div class="card-header">Cartegory</div>
         <div class="card-block">
             <h4 class="card-title">Business Name</h4>
             <p class="card-text">
@@ -80,7 +80,7 @@
     </div>
     <hr>
     <div class="card text-center">
-        <div class="card-header">Category</div>
+        <div class="card-header">Cartegory</div>
         <div class="card-block">
             <h4 class="card-title">Business Name</h4>
             <p class="card-text">
@@ -95,7 +95,7 @@
     </div>
     <hr>
     <div class="card text-center">
-        <div class="card-header">Category</div>
+        <div class="card-header">Cartegory</div>
         <div class="card-block">
             <h4 class="card-title">Business Name</h4>
             <p class="card-text">
@@ -110,7 +110,7 @@
     </div>
     <hr>
     <div class="card text-center">
-        <div class="card-header">Category</div>
+        <div class="card-header">Cartegory</div>
         <div class="card-block">
             <h4 class="card-title">Business Name</h4>
             <p class="card-text">
