--- a/designs/UI/register_biz.html
+++ b/designs/UI/register_biz.html
@@ -48,7 +48,7 @@
             <label class="col-sm-3">Business Name:</label>
             <input class="col-sm-8" placeholder="Sonford &amp; Sons" required autofocus>
             <hr>
-            <label class="col-sm-3">Category:</label>
+            <label class="col-sm-3">Cartegory:</label>
             <input class="col-sm-8" placeholder="Cobbler" required autofocus>
             <hr>
             <label class="col-sm-3">Location:</label>
